--- a/CSAMS-Backend/config.yaml
+++ b/CSAMS-Backend/config.yaml
@@ -2,7 +2,7 @@ mysql:
   host: 127.0.0.1
   port: 3306
   config: charset=utf8mb4&parseTime=True&loc=Local
-  db: gvb_db
+  db: csams_db
   user: root
   password: root
   log_level: dev
