--- a/CSAMS-Backend/config.yaml
+++ b/CSAMS-Backend/config.yaml
@@ -10,3 +10,12 @@ system:
   host: 0.0.0.0
   port: 8080
   env: release
+jwt:
+  secret: scc749
+  expires: 20
+  issuer: scc&zzr&xzx&zjy&fsc
+redis:
+  ip: 127.0.0.1
+  port: 6379
+  password:
+  pool_size: 100
